# Polygone-Petals

./: Cargo.toml  README.md  index.html  inference_modal.py  p2p_bridge.py  train_modal.py
docs/: ARCHITECTURE_EXTENDED.md  SOE_GUIDE_MODAL.md
src/: main.rs  model.rs  network.rs
